List couple of more conferences in Europe

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -100,3 +100,8 @@ Community volunteers maintain <<xref/../../guides/getting_started#,Getting Start
 * http://euroclojure.com[EuroClojure] (usually mid-year)
 * http://www.clojurebridge.org/[ClojureBridge] - beginner workshops for women
 * http://lanyrd.com/search/?context=future&q=clojure&type=conference[Clojure events]
+* https://clojutre.org[ClojuTRE] - A Clojure conference in Tampere/Helsinki, Finland
+* https://skillsmatter.com/conferences/10459-clojure-exchange-2018[Clojure eXchange] - A Clojure conference in London, UK
+* https://clojured.de/[clojureD] - A Clojure conference in Berlin, Germany
+* https://heartofclojure.eu/[Heart of Clojure] - A Clojure conference in Leuven, Belgium
+* https://clojuredays.org/[Dutch Clojure Days] - A Clojure conference in Amsterdam, the Netherlands
